# JIRA-Defect-Tool

./: CLAUDE.md  JIRA-缺陷自动创建工具-PRD.md  JIRA测试工具-PRD.md  README.md  index.html  package-lock.json  package.json
src/: App.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: adb.rs  ai.rs  crypto.rs  jira.rs  mod.rs
src-tauri/src/utils/: html.rs
src/components/: attachment-upload.tsx  batch-progress.tsx  defect-fields.tsx  import-upload.tsx  jira-config-form.tsx  prd-upload.tsx  result-panel.tsx  save-template-modal.tsx  template-manager.tsx  test-case-create.tsx  test-case-translate.tsx  test-point-editor.tsx  translate-preview.tsx
src/constants/: column-mapping.ts  priority.ts  reproduce-rate.ts
src/hooks/: use-tauri-drag-drop.ts
src/pages/: adb-commands.tsx  batch-guide.tsx  defect-form.tsx  prd-test-case.tsx  settings.tsx
src/services/: adb-service.ts  ai-parser.ts  ai-service.ts  dict-service.ts  document-parser.ts  jira-api.ts  table-parser.ts  test-case-translate.ts  translate-engine.ts  validation.ts
src/stores/: batch-store.ts  config-store.ts  defect-store.ts  prd-store.ts
src/styles/: global.css
src/types/: config.ts  defect.ts  jira.ts  template.ts  test-case.ts
src/utils/: file-helper.ts  format-description.ts  format-test-case-description.ts
