[package]
name = "test-tool"
version = "1.0.0"
edition = "2021"

[lib]
name = "jira_defect_tool_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
futures-util = "0.3"
aes-gcm = "0.10"
sha2 = "0.10"
base64 = "0.22"
tokio = { version = "1", features = ["full"] }
rand = "0.8"
scraper = "0.22"
ego-tree = "0.10"
html-escape = "0.2"
libc = "0.2"
dirs = "6"
